/*  tiny-auth: Tiny OIDC Provider
 *  Copyright (C) 2019 The tiny-auth developers
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package api;

message PasswordChangeRequest {
  string current_password = 1;
  string new_password = 2;
}

message HashedPasswordPbkdf2HmacSha256 {
  string credential = 1;
  uint32 iterations = 2;
  string salt = 3;
}

message Managed {}

message PasswordChangeResponse {
  oneof hashed_password {
    HashedPasswordPbkdf2HmacSha256 pbkdf2_hmac_sha256 = 1;
    Managed managed = 2;
  }
}

service TinyAuthApi {
  rpc ChangePassword(PasswordChangeRequest) returns (PasswordChangeResponse);
}
